<resources>
    <string name="app_name">For tourists by tourists</string>
    <string name="title1">Find Your</string>
    <string name="title2">Next Attraction</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="no_account">Create an account</string>
    <string name="yes_account">I have an account</string>
    <string name="search_image">Search for an image</string>
    <string name="create_attraction">Create attraction</string>
    <string name="add_attraction">Add Attraction</string>
    <string name="choose_image">Choose Image</string>
    <string name="attraction_name">Attraction name:</string>
    <string name="attraction_location">Attraction location:</string>
    <string name="attraction_description">Attraction description:</string>
    <string name="attraction_price">Attraction price:</string>
    <string name="finish">Finish</string>
    <string name="update_user_details">Update</string>
    <string name="forgot_password">Forgot password | Reset password</string>
    <string name="request_reset_password">Request reset password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_instructions">If the provided email address was previously used to log in
        the app, you will receive an email with instructions to reset the password.</string>
    <string name="type_new_password">Type new password…</string>
    <string name="retype_new_password">Retype new password…</string>
    <string name="type_your_new_password">Type your new password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>