<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_your_new_password"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txt_user_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_type_new_password_check_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_type_new_password_check_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/type_new_password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txt_type_new_password_check_2"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_type_new_password_check_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:hint="@string/retype_new_password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/bt_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"

        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>